Update wercker.yml 0

--- a/wercker.yml
+++ b/wercker.yml
@@ -49,7 +49,7 @@ build:
            wget https://codeload.github.com/swagger-api/swagger-ui/zip/v${Sversion}
            mv v${Sversion} /opt/tomcat/webapps/ROOT/swagger-ui-${Sversion}.zip
            unzip /opt/tomcat/webapps/ROOT/swagger-ui-${Sversion}.zip
-           mv /opt/tomcat/webapps/ROOT/swagger-ui-${Sversion}/dist/* /opt/tomcat/webapps/ROOT/
+           mv swagger-ui-${Sversion}/dist/* /opt/tomcat/webapps/ROOT/
            rm -rf /opt/tomcat/webapps/ROOT/index.html
            cp -r index.html /opt/tomcat/webapps/ROOT/
       - script:
