--- a/wercker.yml
+++ b/wercker.yml
@@ -42,18 +42,7 @@ build:
            export AWS_DEFAULT_REGION=$AWS_REGION
            aws s3 cp s3://${BUCKET}/com/twiinlabs/${WARFILE} /opt/tomcat/webapps/
       - script:
-         name: Swagger/Admin UI Download
-         code: |
-           rm -rf /opt/tomcat/webapps/ROOT/*
-           Sversion=2.1.4
-           wget https://codeload.github.com/swagger-api/swagger-ui/zip/v${Sversion}
-           mv v${Sversion} /opt/tomcat/webapps/ROOT/swagger-ui-${Sversion}.zip
-           unzip /opt/tomcat/webapps/ROOT/swagger-ui-${Sversion}.zip
-           mv swagger-ui-${Sversion}/dist/* /opt/tomcat/webapps/ROOT/
-           rm -rf /opt/tomcat/webapps/ROOT/index.html
-           cp -r index.html /opt/tomcat/webapps/ROOT/
-      - script:
-         name: Nginx Admin UI Configuration
+         name: Nginx Admin UI Configuration for Swagger
          code: |     
            PORT=$PORT_NO       
            sed -i "s/PORT_NO/$PORT/g" swagger
